<resources>
    <string name="app_name">My Form</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="cell">Cell</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="show_alert">Show Alert</string>
    <string name="open_new_page">Open new page</string>
    <string-array name="department">
        <item>I.T</item>
        <item>Marketing</item>
        <item>Sales</item>
        <item>Admin</item>
        <item>Others</item>
    </string-array>
    <string-array name="states">
        <item>Selangor</item>
        <item>Sabah</item>
        <item>Sarawak</item>
        <item>Kedah</item>
        <item>Kelantan</item>
        <item>Wilayah Persekutuan</item>
        <item>Terengganu</item>
        <item>Johor</item>
        <item>Negeri Sembilan</item>
        <item>Melaka</item>
        <item>Perak</item>
        <item>Pahang</item>
        <item>Perlis</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
