<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".MainActivity">
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/nameEditText"
    android:inputType="textPersonName"
    android:hint="@string/name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailEditText"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="phone"
            android:id="@+id/phoneEditText"
            android:hint="@string/phone"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="phone"
            android:id="@+id/cellEditText"
            android:hint="@string/cell"/>
    </LinearLayout>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"/>
    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:completionThreshold="1"
        android:id="@+id/autocompleteTextView"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/dateTextView"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select Date"
            android:onClick="selectDatePressed"/>
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Open List View"
    android:id="@+id/openList"/>
    </LinearLayout>
    <EditText
        android:gravity="top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/messageEditText"
        android:hint="@string/message"/>

    <Button
        android:layout_gravity="end"
        android:onClick="sendPressed"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/send"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_alert"
        android:onClick="dialogPressed"
        android:layout_gravity="end"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_new_page"
        android:layout_gravity="end"
        android:onClick="openNewPage"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Open another page"
        android:layout_gravity="end"
        android:onClick="openAnotherPage"/>

</LinearLayout>